# Matrix-Rain-for-the-Tanmatsu-Cyberdeck

./: CMakeLists.txt  LICENSE  README.md  idf_component.yml.txt  sdkconfig.defaults.txt
main/: CMakeLists.txt  main.c
